add theme video, instructions on event page, core team photos folder, partially correct timer, events1 message change.

--- a/main_page/static/main_page/css/style.css
+++ b/main_page/static/main_page/css/style.css
@@ -997,6 +997,16 @@ h3 {
   @media only screen and (max-width: 767px) {
     .single-welcome-slide {
       height: 700px; } }
+
+      video {
+        object-fit: cover;
+        width: 100vw;
+        height: 100vh;
+        position: fixed;
+        top: 0;
+        left: 0;
+      }
+  
   .single-welcome-slide .welcome-text {
     position: relative;
     z-index: 1; }
