--- a/main_page/templates/main_page/events.html
+++ b/main_page/templates/main_page/events.html
@@ -7,13 +7,10 @@
         <br>
         <br>
         <p>
-            <li  style = "margin-top: 4.5em">
-                <ul><h3>Abcff;vnlnva feknfs fcncnK fCIOEWjcl csiOHNSLA</h3></ul>
-                <ul><h3>Abcff;vnlnva feknfs fcncnK fCIOEWjcl csiOHNSLA</h3></ul>
-                <ul><h3>Abcff;vnlnva feknfs fcncnK fCIOEWjcl csiOHNSLA</h3></ul>
-                <ul><h3>Abcff;vnlnva feknfs fcncnK fCIOEWjcl csiOHNSLA</h3></ul>
+            <li  style = "margin-top: 4.5em;">
+                <ul><h3 style= "color: white;">Prior to registration, please ensure that you registered at Advitiya, and paid the registration fee.</h3></ul>
             </li>
-        </p>>
+        </p>
         <br>
         <br>
     </div>
