--- a/main_page/templates/main_page/index.html
+++ b/main_page/templates/main_page/index.html
@@ -39,6 +39,9 @@
                     <div class="row h-100 align-items-center">
                         <!-- Welcome Text -->
                         <div class="col-12">
+                            <video autoplay muted loop>
+                                <source src="../../static/main_page/img/bg-img/Advitiya_theme.mp4" type="video/mp4">
+                            </video>
                             <!-- <div class="welcome-text-two text-center">
                                 <h5 data-animation="fadeInUp" data-delay="100ms">The event consistently</h5>
                                 <h2 data-animation="fadeInUp" data-delay="300ms">OSHA Compliance</h2>
@@ -276,17 +279,16 @@
     </div>
     <div class="container">
         <div class="row">
-            <!-- Single Speaker Area -->
-            <!-- <div class="col-12 col-md-6 col-lg-3">
+            <!-- <div class="col-12 col-md-6 col-lg-4">
                 <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                   
                     <div class="speaker-single-thumb">
-                        <img src="https://scontent-bom1-1.xx.fbcdn.net/v/t1.0-9/71137665_472827043311121_5672663285523021824_n.jpg?_nc_cat=101&_nc_oc=AQmoDMHgVpor1xUqr11xgWMwzEIzCg_oB6sNRZOONqLmkmv4wmI5e97tq7O_q5VQ3AU&_nc_ht=scontent-bom1-1.xx&oh=6f0401ecc479e6c8ff7eec36d0bc2c53&oe=5E8CBDDA"
+                        <img src="{% static 'main_page/img/core_team/Rahul_OC.jpg' %}"
                             alt="">
                     </div>
                    
                     <div class="social-info">
-                        <a href="#"><i class="zmdi zmdi-facebook"></i></a>
+                        <a href="mailto:2017chb1052@iitrpr.ac.in?Subject=Regarding%20Advitiya" target="_top"><i class="zmdi zmdi-facebook"></i></a>
                         <a href="#"><i class="zmdi zmdi-instagram"></i></a>
                         <a href="#"><i class="zmdi zmdi-twitter"></i></a>
                         <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
@@ -297,7 +299,325 @@
                         <p>Overall Coordinator</p>
                     </div>
                 </div>
+            </div>
+
+            
+            <div class="col-12 col-md-6 col-lg-4">
+                <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
+                  
+                    <div class="speaker-single-thumb">
+                        <img src="{% static 'main_page/img/core_team/Rahul_OC.jpg' %}"
+                            alt="">
+                    </div>
+                   
+                    <div class="social-info">
+                        <a href="mailto:2017eeb1131@iitrpr.ac.in?Subject=Regarding%20Advitiya" target="_top"><i class="zmdi zmdi-facebook"></i></a>
+                        <a href="#"><i class="zmdi zmdi-instagram"></i></a>
+                        <a href="#"><i class="zmdi zmdi-twitter"></i></a>
+                        <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+                    </div>
+                  
+                    <div class="speaker-info">
+                        <h5>Ashish Bedi</h5>
+                        <p>Finance Head</p>
+                    </div>
+                </div>
+            </div>
+
+            
+            <div class="col-12 col-md-6 col-lg-4">
+                <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
+                  
+                    <div class="speaker-single-thumb">
+                        <img src="{% static 'main_page/img/core_team/Abhinash_Event_Head.jpg' %}"
+                            alt="">
+                    </div>
+                   
+                    <div class="social-info">
+                        <a href="mailto:2017meb1183@iitrpr.ac.in?Subject=Regarding%20Events%20at%20Advitiya" target="_top"><i class="zmdi zmdi-facebook"></i></a>
+                        <a href="#"><i class="zmdi zmdi-instagram"></i></a>
+                        <a href="#"><i class="zmdi zmdi-twitter"></i></a>
+                        <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+                    </div>
+                  
+                    <div class="speaker-info">
+                        <h5>Abhinash Barnwal</h5>
+                        <p>Events Head</p>
+                    </div>
+                </div>
+            </div>
+
+            
+            <div class="col-12 col-md-6 col-lg-3">
+                <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
+                  
+                    <div class="speaker-single-thumb">
+                        <img src="{% static 'main_page/img/core_team/Shubhendra_event.jpg' %}"
+                            alt="">
+                    </div>
+                   
+                    <div class="social-info">
+                        <a href="mailto:2017eeb1169@iitrpr.ac.in?Subject=Regarding%20Events%20at%20Advitiya" target="_top"><i class="zmdi zmdi-facebook"></i></a>
+                        <a href="#"><i class="zmdi zmdi-instagram"></i></a>
+                        <a href="#"><i class="zmdi zmdi-twitter"></i></a>
+                        <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+                    </div>
+                  
+                    <div class="speaker-info">
+                        <h5>Shubhendra Gautam</h5>
+                        <p>Events Head</p>
+                    </div>
+                </div>
+            </div>
+
+            
+            <div class="col-12 col-md-6 col-lg-3">
+                <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
+                  
+                    <div class="speaker-single-thumb">
+                        <img src="{% static 'main_page/img/core_team/Rahul_OC.jpg' %}"
+                            alt="">
+                    </div>
+                   
+                    <div class="social-info">
+                        <a href="mailto:2017chb1045@iitrpr.ac.in?Subject=Regarding%20Advitiya" target="_top"><i class="zmdi zmdi-facebook"></i></a>
+                        <a href="#"><i class="zmdi zmdi-instagram"></i></a>
+                        <a href="#"><i class="zmdi zmdi-twitter"></i></a>
+                        <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+                    </div>
+                  
+                    <div class="speaker-info">
+                        <h5>Kanishk Kumar</h5>
+                        <p>Public Relations Head</p>
+                    </div>
+                </div>
+            </div>
+
+            
+            <div class="col-12 col-md-6 col-lg-3">
+                <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
+                  
+                    <div class="speaker-single-thumb">
+                        <img src="{% static 'main_page/img/core_team/Rahul_OC.jpg' %}"
+                            alt="">
+                    </div>
+                   
+                    <div class="social-info">
+                        <a href="mailto:2017meb1246@iitrpr.ac.in?Subject=Regarding%20Advitiya" target="_top"><i class="zmdi zmdi-facebook"></i></a>
+                        <a href="#"><i class="zmdi zmdi-instagram"></i></a>
+                        <a href="#"><i class="zmdi zmdi-twitter"></i></a>
+                        <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+                    </div>
+                  
+                    <div class="speaker-info">
+                        <h5>Ujjwal Goel</h5>
+                        <p>Marketing Head</p>
+                    </div>
+                </div>
+            </div>
+
+            
+            <div class="col-12 col-md-6 col-lg-3">
+                <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
+                  
+                    <div class="speaker-single-thumb">
+                        <img src="{% static 'main_page/img/core_team/Rahul_OC.jpg' %}"
+                            alt="">
+                    </div>
+                   
+                    <div class="social-info">
+                        <a href="mailto:2017eeb1121@iitrpr.ac.in?Subject=Hospitality%20at%20Advitiya" target="_top"><i class="zmdi zmdi-facebook"></i></a>
+                        <a href="#"><i class="zmdi zmdi-instagram"></i></a>
+                        <a href="#"><i class="zmdi zmdi-twitter"></i></a>
+                        <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+                    </div>
+                  
+                    <div class="speaker-info">
+                        <h5>Abhishek Balhara</h5>
+                        <p>Head, Hospitality Team</p>
+                    </div>
+                </div>
+            </div>
+
+            
+            <div class="col-12 col-md-6 col-lg-3">
+                <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
+                  
+                    <div class="speaker-single-thumb">
+                        <img src="{% static 'main_page/img/core_team/Rahul_OC.jpg' %}"
+                            alt="">
+                    </div>
+                   
+                    <div class="social-info">
+                        <a href="mailto:2017ceb1002@iitrpr.ac.in?Subject=Regarding%20Techno%20School%20Program%20at%Advitiya" target="_top"><i class="zmdi zmdi-facebook"></i></a>
+                        <a href="#"><i class="zmdi zmdi-instagram"></i></a>
+                        <a href="#"><i class="zmdi zmdi-twitter"></i></a>
+                        <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+                    </div>
+                  
+                    <div class="speaker-info">
+                        <h5>Akash Jangid</h5>
+                        <p>School Outreach Program Head</p>
+                    </div>
+                </div>
+            </div>
+
+            
+            <div class="col-12 col-md-6 col-lg-3">
+                <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
+                  
+                    <div class="speaker-single-thumb">
+                        <img src="{% static 'main_page/img/core_team/Rahul_OC.jpg' %}"
+                            alt="">
+                    </div>
+                   
+                    <div class="social-info">
+                        <a href="mailto:2017csb1119@iitrpr.ac.in?Subject=Regarding%20Special%20Lectures%20at%20Advitiya" target="_top"><i class="zmdi zmdi-facebook"></i></a>
+                        <a href="#"><i class="zmdi zmdi-instagram"></i></a>
+                        <a href="#"><i class="zmdi zmdi-twitter"></i></a>
+                        <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+                    </div>
+                  
+                    <div class="speaker-info">
+                        <h5>Vineet Madan</h5>
+                        <p>Organizer, Special Lectures</p>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="col-12 col-md-6 col-lg-3">
+                <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
+                  
+                    <div class="speaker-single-thumb">
+                        <img src="{% static 'main_page/img/core_team/Rahul_OC.jpg' %}"
+                            alt="">
+                    </div>
+                   
+                    <div class="social-info">
+                        <a href="mailto:2017csb1064@iitrpr.ac.in?Subject=Regarding%20Advitiya%20Website" target="_top"><i class="zmdi zmdi-facebook"></i></a>
+                        <a href="#"><i class="zmdi zmdi-instagram"></i></a>
+                        <a href="#"><i class="zmdi zmdi-twitter"></i></a>
+                        <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+                    </div>
+                  
+                    <div class="speaker-info">
+                        <h5>Adarsh Kumar</h5>
+                        <p>Head, Web Development Team</p>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="col-12 col-md-6 col-lg-3">
+                <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
+                  
+                    <div class="speaker-single-thumb">
+                        <img src="{% static 'main_page/img/core_team/Rahul_OC.jpg' %}"
+                            alt="">
+                    </div>
+                   
+                    <div class="social-info">
+                        <a href="mailto:2017csb1073@iitrpr.ac.in?Subject=Regarding%20Advitiya%20Website" target="_top"><i class="zmdi zmdi-facebook"></i></a>
+                        <a href="#"><i class="zmdi zmdi-instagram"></i></a>
+                        <a href="#"><i class="zmdi zmdi-twitter"></i></a>
+                        <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+                    </div>
+                  
+                    <div class="speaker-info">
+                        <h5>Dilip Sharma</h5>
+                        <p>Head, Web Development Team</p>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="col-12 col-md-6 col-lg-3">
+                <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
+                  
+                    <div class="speaker-single-thumb">
+                        <img src="{% static 'main_page/img/core_team/Rahul_OC.jpg' %}"
+                            alt="">
+                    </div>
+                   
+                    <div class="social-info">
+                        <a href="mailto:2017csb1087@iitrpr.ac.in?Subject=Regarding%20Advitiya" target="_top"><i class="zmdi zmdi-facebook"></i></a>
+                        <a href="#"><i class="zmdi zmdi-instagram"></i></a>
+                        <a href="#"><i class="zmdi zmdi-twitter"></i></a>
+                        <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+                    </div>
+                  
+                    <div class="speaker-info">
+                        <h5>Rohit Katle</h5>
+                        <p>Head, Creativity Team</p>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="col-12 col-md-6 col-lg-3">
+                <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
+                  
+                    <div class="speaker-single-thumb">
+                        <img src="{% static 'main_page/img/core_team/Rahul_OC.jpg' %}"
+                            alt="">
+                    </div>
+                   
+                    <div class="social-info">
+                        <a href="mailto:2017eeb1150@iitrpr.ac.in?Subject=Regarding%20Decoration%20at%20Advitiya" target="_top"><i class="zmdi zmdi-facebook"></i></a>
+                        <a href="#"><i class="zmdi zmdi-instagram"></i></a>
+                        <a href="#"><i class="zmdi zmdi-twitter"></i></a>
+                        <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+                    </div>
+                  
+                    <div class="speaker-info">
+                        <h5>Mayank Raj</h5>
+                        <p>Head, Decoration Team</p>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="col-12 col-md-6 col-lg-3">
+                <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
+                  
+                    <div class="speaker-single-thumb">
+                        <img src="{% static 'main_page/img/core_team/Rahul_OC.jpg' %}"
+                            alt="">
+                    </div>
+                   
+                    <div class="social-info">
+                        <a href="mailto:2017ceb1007@iitrpr.ac.in?Subject=Regarding%20Entertainment%20Nights%at%20Advitiya" target="_top"><i class="zmdi zmdi-facebook"></i></a>
+                        <a href="#"><i class="zmdi zmdi-instagram"></i></a>
+                        <a href="#"><i class="zmdi zmdi-twitter"></i></a>
+                        <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+                    </div>
+                  
+                    <div class="speaker-info">
+                        <h5>Hardik Goyal</h5>
+                        <p>Pronites Head</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-6 col-lg-3">
+                <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
+                  
+                    <div class="speaker-single-thumb">
+                        <img src="{% static 'main_page/img/core_team/Rahul_OC.jpg' %}"
+                            alt="">
+                    </div>
+                   
+                    <div class="social-info">
+                        <a href="mailto:2017meb1247@iitrpr.ac.in?Subject=Regarding%20Advitiya" target="_top"><i class="zmdi zmdi-facebook"></i></a>
+                        <a href="#"><i class="zmdi zmdi-instagram"></i></a>
+                        <a href="#"><i class="zmdi zmdi-twitter"></i></a>
+                        <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+                    </div>
+                  
+                    <div class="speaker-info">
+                        <h5>Vedant Paithane</h5>
+                        <p>Head, Content Writing Team</p>
+                    </div>
+                </div>
             </div> -->
+            
+            
 
         </div>
     </div>
