Fix team registraion and payment redirect page

--- a/main_page/templates/main_page/register_team.html
+++ b/main_page/templates/main_page/register_team.html
@@ -18,7 +18,7 @@
             <div class="col-md-6">
                 <br>
                 <div class="breadcrumb-content">
-                    <h2 class="page-title">Register As Participant</h2>
+                    <h2 class="page-title">Register Your Team</h2>
                     <form method="POST">
                         {% csrf_token %}
                         {{ team_form | crispy }}
