Add quick event link

--- a/TSP/templates/TSP/payment.html
+++ b/TSP/templates/TSP/payment.html
@@ -13,11 +13,11 @@
                     <table class="table display-data text-white align-items-center">
                         <tbody>
                             <tr>
-                                <th scope="row">Paid for Category A(9-10th class):</th>
+                                <th scope="row">Paid for Category A (9-10th class):</th>
                                 <td>{{ num_cat_a }}</td>
                             </tr>
                             <tr>
-                                <th scope="row">Paid for Category B(11-12th class)</th>
+                                <th scope="row">Paid for Category B (11-12th class):</th>
                                 <td>{{ num_cat_b }}</td>
                             </tr>
                         </tbody>
