Fix event quick link

--- a/main_page/templates/main_page/events.html
+++ b/main_page/templates/main_page/events.html
@@ -38,7 +38,7 @@
                 <br>
                 <div class="btn-group flex-wrap" role="group" aria-label="Basic example">
                     {% for category, event_list in events.items %}
-                    <a href="#{{category}}" style="color: white; text-transform: uppercase;"
+                    <a href="#{{category}}" style="color: white; text-transform:uppercase;border-radius:0"
                         class="btn confer-btn">{{category}}
                     </a>
                     {% endfor %}
