Event Page Message Change

--- a/main_page/templates/main_page/events.html
+++ b/main_page/templates/main_page/events.html
@@ -9,14 +9,22 @@
                 <div class="breadcrumb-content">
                     <br><br>
                     <div class="alert alert-primary mx-auto" role="alert">
-                        <h3>Important</h3>
+                        <h3>Important Note</h3>
+                            <ul>
+                            After you pay the nominal registration fee of Rs. 400, you may participate in any number of events.
+                            </ul>
+                            <br>
+                        <h3>Event Registration Process</h3>
                         <br>
                         <ul>
                             <li style="list-style-type:disc;">
-                                Prior to registration, please ensure that you registered <a
-                                    href="{% url 'main_page:register_as_participant' %}">(Click Here)</a> at
-                                Advitiya, and paid <a href="{% url 'main_page:payment' %}">(Click Here)</a> the
-                                registration fee.
+                                Step 1: Register as a participant and get your ADVITIYA ID. <a href="{% url 'main_page:register_as_participant' %}">(Click Here)</a>
+                            </li>
+                            <li style="list-style-type:disc;">
+                                Step 2: Pay the registration fee. <a href="{% url 'main_page:payment' %}">(Click Here)</a>
+                            </li>
+                            <li style="list-style-type:disc;">
+                                Step 3: Register in the events you wish to participate using your ADVITIYA ID.
                             </li>
                         </ul>
                         <br>
