Contain view in TSP and remove Revealing Soon in Main Page

--- a/main_page/templates/main_page/base.html
+++ b/main_page/templates/main_page/base.html
@@ -138,7 +138,7 @@
 
                             <!-- Footer Nav -->
                             <ul class="footer-nav">
-                                <li><a href="#">Opening Soon</a></li>
+                                <li><a href="#">Revealing Soon</a></li>
                                 <!-- <li><a href="#">Microsoft Excel Basics</a></li>
                                 <li><a href="#">Forum Speaker Series</a></li>
                                 <li><a href="#">Tedx Moscow Conference</a></li> -->
