--- a/TSP/templates/TSP/profile.html
+++ b/TSP/templates/TSP/profile.html
@@ -39,11 +39,11 @@
                                 <td>{{ profile.point_of_contact_phone }}</td>
                             </tr>
                             <tr>
-                                <th scope="row">Paid for Category A (9-10th class):</th>
+                                <th scope="row">Paid for Category A (Classes 9th & 10th):</th>
                                 <td>{{ num_cat_a }}</td>
                             </tr>
                             <tr>
-                                <th scope="row">Paid for Category B (11-12th class):</th>
+                                <th scope="row">Paid for Category B (Classes 11 & 12th):</th>
                                 <td>{{ num_cat_b }}</td>
                             </tr>
                         </tbody>
